fix(totalOrgSummary): improve alignment

--- a/src/components/TotalOrgSummary/VolunteerStatus/VolunteerStatusChart.module.css
+++ b/src/components/TotalOrgSummary/VolunteerStatus/VolunteerStatusChart.module.css
@@ -55,7 +55,7 @@
 }
 
 .volunteerMentorFootnote {
-  margin-top: 16px;
+  margin-top: 120px;
   text-align: center;
   font-size: 0.75rem;
   color: #4f4f4f;
